# rust-sea

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: character_effect.rs  character_feature.rs  effect.rs  feature.rs  lib.rs  player_character.rs  prelude.rs  sea_orm_active_enums.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
