[package]
name = "rust-sea"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
dotenvy = "0.15.6"
entity = { version = "0.1.0", path = "entity" }
migration = { version = "0.1.0", path = "migration" }
sea-orm = "0.11.1"
tokio = { version = "1.26.0", features = ["full"] }
